--- a/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
@@ -5,67 +5,73 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:colle_tMedecine.View" x:Name="fiche_patient"
 	mc:Ignorable="d"
 	x:Class="colle_tMedecine.View.Fiche_Patient"
-	Width="640" Height="480">
+	Width="992" Height="580">
 
-	<Grid x:Name="LayoutRoot" Background="White" DataContext="{Binding Patient}">
-		<local:Menu HorizontalAlignment="Left" VerticalAlignment="Top" d:IsPrototypingComposition="True" Height="84"/>
-		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="8,130,0,87" Width="100" ItemsSource="{Binding Obs}"
-                 SelectedItem="{Binding DataContext.SelectedObservation,ElementName=Root, Mode=TwoWay}">
+	<Grid x:Name="LayoutRoot" DataContext="{Binding Patient}">
+		<Rectangle Margin="8,-0.5,8,49.5" Stroke="Black" RadiusX="20" RadiusY="20">
+			<Rectangle.Fill>
+				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
+		</Rectangle.Fill>
+		</Rectangle>
+		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="18.333,81,0,58" Width="118" ItemsSource="{Binding Obs}"
+                 SelectedItem="{Binding DataContext.SelectedObservation,ElementName=Root, Mode=TwoWay}" Background="#FFDEEBF3">
         </ListBox>
-		<TextBlock x:Name="Patient_title" HorizontalAlignment="Left" Height="31" Margin="0,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" FontSize="18.667" FontWeight="Bold" TextAlignment="Center">
-			<TextBlock.Background>
-				<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-					<GradientStop Color="#FFCCCCCC"/>
-					<GradientStop Color="White" Offset="1"/>
-				</LinearGradientBrush>
-			</TextBlock.Background><Run Language="fr-fr" Text="{Binding Path=Name}"/></TextBlock>
-		<Grid x:Name="Content" Margin="112,130,20,0">
+		<TextBlock x:Name="Patient_title" HorizontalAlignment="Left" Height="33" Margin="9.333,29.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
+				<DropShadowEffect ShadowDepth="6" RenderingBias="Quality"/>
+			</TextBlock.Effect><TextBlock.Background>
+				<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
+			</TextBlock.Background><Run Language="fr-fr" Text="{Binding Path=Name}"/>
+		</TextBlock>	
+		<Grid x:Name="Content" Margin="149.333,81,21.667,49.5">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="0.061*"/>
+				<ColumnDefinition Width="0.064*"/>
 				<ColumnDefinition Width="0.004*"/>
-				<ColumnDefinition Width="0.52*"/>
-				<ColumnDefinition Width="0.059*"/>
-				<ColumnDefinition Width="0.356*"/>
+				<ColumnDefinition Width="0.545*"/>
+				<ColumnDefinition Width="0.062*"/>
+				<ColumnDefinition Width="0.325*"/>
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
-				<RowDefinition Height="0.464*"/>
-				<RowDefinition Height="0.536*"/>
+				<RowDefinition Height="0.465*"/>
+				<RowDefinition Height="0.535*"/>
 			</Grid.RowDefinitions>
-			<StackPanel x:Name="Informations" Margin="3,0,12,0" Grid.ColumnSpan="3" DataContext="{Binding}">
-				<TextBlock Height="21" Margin="63,0,80,0" TextWrapping="Wrap"><Run Language="fr-fr" Text="Informations"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
+			<StackPanel x:Name="Informations" Margin="3,0,43.173,43.217" Grid.ColumnSpan="3" DataContext="{Binding}" OpacityMask="White" Background="#FFDEEBF3">
+				<TextBlock Height="26" Margin="0" TextWrapping="Wrap" HorizontalAlignment="Center" Width="454.1" FontWeight="Bold" TextAlignment="Center"><TextBlock.Background>
+						<SolidColorBrush Color="White" Opacity="0.29"/>
+					</TextBlock.Background><Run Language="fr-fr" Text="Informations" Foreground="#FF004D83"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info" Height="24">
-					<TextBlock TextWrapping="Wrap" Margin="0,0,0,8" Width="66.517"><Run Language="fr-fr" Text="Nom : "/></TextBlock>
-					<TextBlock x:Name="Name" TextWrapping="Wrap" Margin="0,0,0,8" Width="155.503"><Run Language="fr-fr" Text="{Binding Path=Name}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,8" Width="66.517"><Run Language="fr-fr" Text="Nom : " Style="{DynamicResource blueText}" /></TextBlock>
+					<TextBlock x:Name="Name" TextWrapping="Wrap" Margin="0,0,0,8" Width="155.503"><Run Language="fr-fr" Text="{Binding Name}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Prenom"/></TextBlock>
-					<TextBlock x:Name="Firstname" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Path=Firstname}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Prenom" Style="{DynamicResource blueText}" /></TextBlock>
+					<TextBlock x:Name="Firstname" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Firstname}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy1" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Date"/></TextBlock>
-					<TextBlock x:Name="Date" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top" Height="17"><Run Language="fr-fr" Text="{Binding Path=Birthday}"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Date" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock x:Name="Date" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top" Height="17"><Run Language="fr-fr" Text="{Binding Birthday}" Style="{DynamicResource blueText}"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy2" Height="34" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Path=Weight}"/></TextBlock>
-					<TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="70"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Poids" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Weight}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy3" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="0,0,0,9.04" Width="111.517" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Rythme cardiaque:"/></TextBlock>
-					<TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text=""/></TextBlock>
-					<TextBlock TextWrapping="Wrap" Margin="0" Width="80.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Température"/></TextBlock>
-					<TextBlock x:Name="Temperature" TextWrapping="Wrap" Margin="0" Width="41.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="37,5"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,9.04" Width="111.517" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Rythme cardiaque:" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="177,0,0,0" Width="80.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Température" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock x:Name="Temperature" TextWrapping="Wrap" Margin="0" Width="41.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="37,5" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 			</StackPanel>
-			<ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8,0,8,46" Grid.ColumnSpan="2" ItemsSource="{Binding Path=Prescription}">
+			<ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8.173,0,0,81.217" Grid.ColumnSpan="2" ItemsSource="{Binding Path=Prescription}">
 				<ListView.View>
 					<GridView>
 						<GridViewColumn/>
 					</GridView>
 				</ListView.View>
 			</ListView>
-			<TextBlock x:Name="Comments" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="0,0,0,8" Height="77.904" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Commentaires:"/></TextBlock>
-			<StackPanel Orientation="Horizontal" x:Name="Images" Margin="3,4,0,89.904" Grid.Row="1" Grid.ColumnSpan="5"/>
-			<Button x:Name="Graph_live" Content="Graphiques" Grid.Column="4" Height="19" Margin="0,0,38.848,8" VerticalAlignment="Bottom"/>
+			<TextBlock Foreground="#FF004D83" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="0,0,8,97.5" Height="17.904" VerticalAlignment="Bottom" FontWeight="Bold" Background="#FFDEEBF3"><Run Language="fr-fr" Text="Commentaires:"/></TextBlock>
+			<TextBlock x:Name="Comments" Style="{DynamicResource blueText}" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="0,0,8,8" Height="89.5" VerticalAlignment="Bottom" Background="#FFDEEBF3" ><Run Background="#FFDEEBF3" Language="fr-fr"/></TextBlock>
+			<StackPanel Orientation="Horizontal" x:Name="Images" Margin="3,-43.217,0,0" Grid.Row="1" Grid.ColumnSpan="5" Height="160.296" VerticalAlignment="Top"/>
+			<Button x:Name="Graph_live" Content="Graphiques" Grid.Column="4" Height="30" Margin="46.665,0,97.848,47.217" VerticalAlignment="Bottom" Style="{DynamicResource SimpleButton}"/>
 		</Grid>
 	</Grid>
 </UserControl>
