--- a/colle_tMedecine/colle_tMedecine/App.xaml
+++ b/colle_tMedecine/colle_tMedecine/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-         
-    	<Color x:Key="BlueTextColor">#FF035C93</Color>
+        <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+        <Color x:Key="BlueTextColor">#FF035C93</Color>
     	<Color x:Key="Blue_Button">#FF195077</Color>
     	<Color x:Key="BlueTitleBg">#FF3A7198</Color>
         <SolidColorBrush x:Key="SimpleButtonBackground" Color="{DynamicResource Blue_Button}"/>
