Modyfing Fiche_patient viewmodel

--- a/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
@@ -6,15 +6,17 @@
 	mc:Ignorable="d"
 	x:Class="colle_tMedecine.View.Fiche_Patient"
 	Width="992" Height="580">
-
-	<Grid x:Name="LayoutRoot" DataContext="{Binding Patient}">
+    
+    
+    <Grid x:Name="LayoutRoot" DataContext="{Binding Patient}">
 		<Rectangle Margin="8,-0.5,8,49.5" Stroke="Black" RadiusX="20" RadiusY="20">
 			<Rectangle.Fill>
 				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
 		</Rectangle.Fill>
 		</Rectangle>
-		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="18.333,81,0,58" Width="118" ItemsSource="{Binding Obs}"
-                 SelectedItem="{Binding DataContext.SelectedObservation,ElementName=Root, Mode=TwoWay}" Background="#FFDEEBF3">
+
+		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="18.333,81,0,58" Width="118" ItemsSource="{Binding Obs}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"
+                 Background="#FFDEEBF3" SelectedItem="{Binding DataContext.SelectedObservation, ElementName=LayoutRoot, Mode=TwoWay}">
         </ListBox>
 		<TextBlock x:Name="Patient_title" HorizontalAlignment="Left" Height="33" Margin="9.333,29.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
 				<DropShadowEffect ShadowDepth="6" RenderingBias="Quality"/>
@@ -43,35 +45,67 @@
 					<TextBlock x:Name="Name" TextWrapping="Wrap" Margin="0,0,0,8" Width="155.503"><Run Language="fr-fr" Text="{Binding Name}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Prenom" Style="{DynamicResource blueText}" /></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Prenom :" Style="{DynamicResource blueText}" /></TextBlock>
 					<TextBlock x:Name="Firstname" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Firstname}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy1" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Date" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Naissance :" Style="{DynamicResource blueText}"/></TextBlock>
 					<TextBlock x:Name="Date" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top" Height="17"><Run Language="fr-fr" Text="{Binding Birthday}" Style="{DynamicResource blueText}"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy2" Height="34" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Poids" Style="{DynamicResource blueText}"/></TextBlock>
-					<TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Weight}" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Poids : " Style="{DynamicResource blueText}"/></TextBlock>
+                    <TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding DataContext.SelectedObservation.Weight, ElementName=LayoutRoot}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy3" Height="25" Margin="0" VerticalAlignment="Top">
-					<TextBlock TextWrapping="Wrap" Margin="4,0,0,9.04" Width="111.517" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Rythme cardiaque:" Style="{DynamicResource blueText}"/></TextBlock>
-					<TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="" Style="{DynamicResource blueText}"/></TextBlock>
+					<TextBlock TextWrapping="Wrap" Margin="4,0,0,9.04" Width="111.517" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Pression sanguine :" Style="{DynamicResource blueText}"/></TextBlock>
+                    <TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Path=Pressure}" Style="{DynamicResource blueText}"/></TextBlock>
 					<TextBlock TextWrapping="Wrap" Margin="177,0,0,0" Width="80.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Température" Style="{DynamicResource blueText}"/></TextBlock>
 					<TextBlock x:Name="Temperature" TextWrapping="Wrap" Margin="0" Width="41.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="37,5" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 			</StackPanel>
-			<ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8.173,0,0,81.217" Grid.ColumnSpan="2" ItemsSource="{Binding Path=Prescription}">
+            <ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8.173,0,0,81.217" Grid.ColumnSpan="2" ItemsSource="{Binding DataContext.SelectedObservation.Prescriptions}">
 				<ListView.View>
 					<GridView>
 						<GridViewColumn/>
 					</GridView>
 				</ListView.View>
 			</ListView>
-			<TextBlock Foreground="#FF004D83" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="0,0,8,97.5" Height="17.904" VerticalAlignment="Bottom" FontWeight="Bold" Background="#FFDEEBF3"><Run Language="fr-fr" Text="Commentaires:"/></TextBlock>
-			<TextBlock x:Name="Comments" Style="{DynamicResource blueText}" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="0,0,8,8" Height="89.5" VerticalAlignment="Bottom" Background="#FFDEEBF3" ><Run Background="#FFDEEBF3" Language="fr-fr"/></TextBlock>
-			<StackPanel Orientation="Horizontal" x:Name="Images" Margin="3,-43.217,0,0" Grid.Row="1" Grid.ColumnSpan="5" Height="160.296" VerticalAlignment="Top"/>
-			<Button x:Name="Graph_live" Content="Graphiques" Grid.Column="4" Height="30" Margin="46.665,0,97.848,47.217" VerticalAlignment="Bottom" Style="{DynamicResource SimpleButton}"/>
+			<TextBlock Foreground="#FF004D83" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="5" Margin="3,0,8,97.5" Height="17.904" VerticalAlignment="Bottom" FontWeight="Bold" Background="#FFDEEBF3"><Run Language="fr-fr" Text="Commentaires:"/></TextBlock>
+            <ScrollViewer Style="{DynamicResource blueText}" Grid.Row="1" Grid.ColumnSpan="5" VerticalScrollBarVisibility="Auto" CanContentScroll="True" Height="90" Margin="3,129,8,0">
+            <TextBlock x:Name="Comments" TextWrapping="Wrap"  Text="{Binding ElementName=Observations, Path=SelectedItem.Comments}" VerticalAlignment="Top" Background="#FFDEEBF3" >
+                <Run Background="#FFDEEBF3" Language="fr-fr"/>
+                </TextBlock>
+            </ScrollViewer>
+
+            <ScrollViewer Margin="3,-180,0,0" Grid.Row="1" Grid.ColumnSpan="5" Height="140" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                <ScrollViewer.Resources>
+                    <Style TargetType="{x:Type ListBox}">
+                        <Setter Property="ItemTemplate">
+                            <Setter.Value>
+                                <DataTemplate>
+                                    <Border BorderBrush="Black" BorderThickness="4" CornerRadius="5" Margin="6">
+                                        <Image Source="{Binding Path=Source}" Stretch="Fill" Width="50" />
+                                    </Border>
+                                </DataTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Setter Property="ItemsPanel">
+                            <Setter.Value>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel />
+                                </ItemsPanelTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
+                        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled" />
+                        
+                    </Style>
+                </ScrollViewer.Resources>
+                <ListBox Height="150" ItemsSource="{Binding DataContext.ListImages}" VerticalAlignment="Top" />
+            </ScrollViewer>
+            <Button x:Name="Graph_live" Content="Graphiques" Grid.Column="4" Height="30" Margin="46.665,0,97.848,47.217" VerticalAlignment="Bottom" Style="{DynamicResource SimpleButton}"/>
 		</Grid>
 	</Grid>
 </UserControl>
