--- a/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Fiche_Patient.xaml
@@ -8,21 +8,21 @@
 	Width="992" Height="580">
     
     
-    <Grid x:Name="LayoutRoot" DataContext="{Binding Patient}">
+    <Grid x:Name="LayoutRoot">
 		<Rectangle Margin="8,-0.5,8,49.5" Stroke="Black" RadiusX="20" RadiusY="20">
 			<Rectangle.Fill>
 				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
-		</Rectangle.Fill>
-		</Rectangle>
+            </Rectangle.Fill>
+        </Rectangle>
 
-		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="18.333,81,0,58" Width="118" ItemsSource="{Binding Obs}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"
+		<ListBox x:Name="Observations" HorizontalAlignment="Left" Margin="18.333,81,0,58" Width="118" ItemsSource="{Binding Patient.Obs}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"
                  Background="#FFDEEBF3" SelectedItem="{Binding DataContext.SelectedObservation, ElementName=LayoutRoot, Mode=TwoWay}">
         </ListBox>
 		<TextBlock x:Name="Patient_title" HorizontalAlignment="Left" Height="33" Margin="9.333,29.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
 				<DropShadowEffect ShadowDepth="6" RenderingBias="Quality"/>
 			</TextBlock.Effect><TextBlock.Background>
 				<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
-			</TextBlock.Background><Run Language="fr-fr" Text="{Binding Path=Name}"/>
+			</TextBlock.Background><Run Language="fr-fr" Text="{Binding Patient.Name}"/>
 		</TextBlock>	
 		<Grid x:Name="Content" Margin="149.333,81,21.667,49.5">
 			<Grid.ColumnDefinitions>
@@ -36,34 +36,36 @@
 				<RowDefinition Height="0.465*"/>
 				<RowDefinition Height="0.535*"/>
 			</Grid.RowDefinitions>
-			<StackPanel x:Name="Informations" Margin="3,0,43.173,43.217" Grid.ColumnSpan="3" DataContext="{Binding}" OpacityMask="White" Background="#FFDEEBF3">
+			<StackPanel x:Name="Informations" Margin="3,0,43.173,43.217" Grid.ColumnSpan="3" OpacityMask="White" Background="#FFDEEBF3">
 				<TextBlock Height="26" Margin="0" TextWrapping="Wrap" HorizontalAlignment="Center" Width="454.1" FontWeight="Bold" TextAlignment="Center"><TextBlock.Background>
 						<SolidColorBrush Color="White" Opacity="0.29"/>
 					</TextBlock.Background><Run Language="fr-fr" Text="Informations" Foreground="#FF004D83"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info" Height="24">
 					<TextBlock TextWrapping="Wrap" Margin="4,0,0,8" Width="66.517"><Run Language="fr-fr" Text="Nom : " Style="{DynamicResource blueText}" /></TextBlock>
-					<TextBlock x:Name="Name" TextWrapping="Wrap" Margin="0,0,0,8" Width="155.503"><Run Language="fr-fr" Text="{Binding Name}" Style="{DynamicResource blueText}"/></TextBlock>
+                    <TextBlock x:Name="Name" TextWrapping="Wrap" Margin="0,0,0,8" Width="155.503"><Run Language="fr-fr" Text="{Binding Patient.Name}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy" Height="25" Margin="0" VerticalAlignment="Top">
 					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Prenom :" Style="{DynamicResource blueText}" /></TextBlock>
-					<TextBlock x:Name="Firstname" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Firstname}" Style="{DynamicResource blueText}"/></TextBlock>
+                    <TextBlock x:Name="Firstname" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Patient.Firstname}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy1" Height="25" Margin="0" VerticalAlignment="Top">
 					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Naissance :" Style="{DynamicResource blueText}"/></TextBlock>
-					<TextBlock x:Name="Date" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top" Height="17"><Run Language="fr-fr" Text="{Binding Birthday}" Style="{DynamicResource blueText}"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
+                    <TextBlock x:Name="Date" TextWrapping="Wrap" Margin="0" Width="155.503" VerticalAlignment="Top" Height="17"><Run Language="fr-fr" Text="{Binding Patient.Birthday}" Style="{DynamicResource blueText}"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
 				</StackPanel>
-				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy2" Height="34" VerticalAlignment="Top">
+            </StackPanel>
+                
+            <StackPanel Orientation="Horizontal" x:Name="Name_info_Copy2" Height="34" VerticalAlignment="Top" Margin="0,127,0,0">
 					<TextBlock TextWrapping="Wrap" Margin="4,0,0,0" Width="65.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Poids : " Style="{DynamicResource blueText}"/></TextBlock>
-                    <TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding DataContext.SelectedObservation.Weight, ElementName=LayoutRoot}" Style="{DynamicResource blueText}"/></TextBlock>
+                <TextBlock x:Name="Poids" TextWrapping="Wrap" Margin="0" Width="32.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding SelectedObservation.Weight}" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
-				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy3" Height="25" Margin="0" VerticalAlignment="Top">
+				<StackPanel Orientation="Horizontal" x:Name="Name_info_Copy3" Height="25" Margin="0,104,0,0" VerticalAlignment="Top">
 					<TextBlock TextWrapping="Wrap" Margin="4,0,0,9.04" Width="111.517" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Pression sanguine :" Style="{DynamicResource blueText}"/></TextBlock>
-                    <TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Path=Pressure}" Style="{DynamicResource blueText}"/></TextBlock>
+                <TextBlock x:Name="Cardio" TextWrapping="Wrap" Margin="0" Width="40.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="{Binding Path=SelectedObservation.Pressure}" Style="{DynamicResource blueText}"/></TextBlock>
 					<TextBlock TextWrapping="Wrap" Margin="177,0,0,0" Width="80.517" VerticalAlignment="Top"><Run Language="fr-fr" Text="Température" Style="{DynamicResource blueText}"/></TextBlock>
 					<TextBlock x:Name="Temperature" TextWrapping="Wrap" Margin="0" Width="41.503" VerticalAlignment="Top"><Run Language="fr-fr" Text="37,5" Style="{DynamicResource blueText}"/></TextBlock>
 				</StackPanel>
-			</StackPanel>
-            <ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8.173,0,0,81.217" Grid.ColumnSpan="2" ItemsSource="{Binding DataContext.SelectedObservation.Prescriptions}">
+
+            <ListView x:Name="Prescriptions" ToolTip="Prescriptions" Grid.Column="3" Margin="-8.173,0,0,81.217" Grid.ColumnSpan="2" ItemsSource="{Binding SelectedObservation.Prescriptions, ElementName=Content}">
 				<ListView.View>
 					<GridView>
 						<GridViewColumn/>
@@ -103,7 +105,7 @@
                         
                     </Style>
                 </ScrollViewer.Resources>
-                <ListBox Height="150" ItemsSource="{Binding DataContext.ListImages}" VerticalAlignment="Top" />
+                <ListBox Height="150" ItemsSource="{Binding DataContext.ListImages, ElementName=LayoutRoot, Mode=Default}" VerticalAlignment="Top" />
             </ScrollViewer>
             <Button x:Name="Graph_live" Content="Graphiques" Grid.Column="4" Height="30" Margin="46.665,0,97.848,47.217" VerticalAlignment="Bottom" Style="{DynamicResource SimpleButton}"/>
 		</Grid>
